--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "jquery": "^1.12.4",
+    "popper.js": "^1.14.3",
+    "ajv": "^6.5.0",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
